# cardinal

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: main.yml
cardinal/: Cargo.toml  README.md  package-lock.json  package.json
cardinal-sdk/: Cargo.toml
cardinal-sdk/examples/: fs_visit.rs  search.rs
cardinal-sdk/src/: consts.rs  database.rs  disk_entry.rs  event_flag.rs  event_stream.rs  fs_visit.rs  lib.rs  main.rs  utils.rs
cardinal-sdk/src/fsevent/: event_flag.rs  event_id.rs  event_stream.rs  mod.rs
cardinal-syntax/src/: lib.rs
cardinal-syntax/tests/: boolean.rs  doc_examples.rs  filters.rs  phrases_and_words.rs  stress_cases.rs
cardinal/src/: App.css  App.jsx  App.tsx  index.ts  lib.rs  main.tsx  menu.ts
cardinal/src-tauri/: Cargo.toml  tauri.conf.json
cardinal/src-tauri/src/: background.rs  commands.rs  lib.rs  main.rs
cardinal/src/components/: ColumnHeader.jsx  ColumnHeader.tsx  ContextMenu.css  ContextMenu.jsx  FSEventsPanel.tsx  FileRow.jsx  LanguageSwitcher.tsx  MiddleEllipsis.jsx  MiddleEllipsisHighlight.jsx  StateDisplay.jsx  StateDisplay.tsx  StatusBar.jsx  StatusBar.tsx  VirtualList.jsx  VirtualizedRow.jsx
cardinal/src/constants/: index.js
cardinal/src/fs_entry/: tests.rs
cardinal/src/hooks/: useColumnResize.js  useContextMenu.ts  useDataLoader.js  useFileSearch.ts  usePreventRefresh.js
cardinal/src/i18n/: config.ts
cardinal/src/i18n/resources/: de.json  en.json  es.json  fr.json  ja.json  ru.json  uk.json  zh.json
cardinal/src/types/: sort.ts
cardinal/src/utils/: LRUCache.js  format.js
examples/: tree.rs
fs-icon/: Cargo.toml
fs-icon/src/: lib.rs
fswalk/: Cargo.toml
fswalk/examples/: scan.rs
fswalk/src/: lib.rs
lsf/: Cargo.toml
lsf-tui/: Cargo.toml
lsf-tui/src/: main.rs
lsf/src/: cache.rs  main.rs  query.rs
namepool/: Cargo.toml
namepool/src/: cache_line.rs  lib.rs
search-cache/: Cargo.toml
search-cache/src/: cache.rs  lib.rs  metadata_cache.rs  name_index.rs  query.rs  slab.rs  tests_extra.rs
src/: c.rs  lib.rs  processor.rs  runtime.rs
src/database/: mod.rs
src/database/tests/: db.rs
src/fs_entry/: mod.rs  tests.rs
was/src/: main.rs
