[package]
name = "cardinal"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cardinal-sdk.path = "../cardinal-sdk"
pathbytes.path = "../pathbytes"
anyhow = "1.0.52"
bincode = "2.0.0"
core-foundation = { version = "0.9.2", features = ["mac_os_10_8_features"] }
crossbeam = "0.8.1"
once_cell = { version = "1.9.0", features = ["parking_lot"] }
parking_lot = "0.11.2"
time = "0.3.5"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
walkdir = "2.3.2"
serde = { version = "1.0.135", features = ["derive"] }

[dev-dependencies]
ctrlc = "3.2.1"
serde_json = "1.0.78"
tempfile = "3.3.0"
time = { version = "0.3.7", features = ["formatting"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
